--- a/README
+++ b/README
@@ -13,6 +13,7 @@ This behavior permits to attach tags to Doctrine objects. It includes tag-clouds
  * related tags handling
  * unit-tested for model
  * [machine tags](http://www.flickr.com/groups/api/discuss/72157594497877875/) support (also called "triple tags")
+ * jQuery-based typeahead for tags (optional)
  * easy tags fixtures loading NOT YET
 
 ## Philosophy of the stuff ##
@@ -302,6 +303,70 @@ In case you want to display a long list of taggable objects with their associate
       var_dump($post-getTags());
     }
 
+### Typeahead ###
+
+Tag typeahead support allows users to complete the current tag by pressing
+the tab key, which picks what the plugin believes to be the most likely
+tag suggestion, or by clicking on any of several suggested tags.
+
+To enable tag typeahead support:
+
+First make sure you are loading jQuery in your project, typically
+via view.yml. We recommend you stay up to date with jQuery 1.3.x.
+
+Next, enable the taggableComplete module in settings.yml. If you are
+concerned about the names of valid tags being discovered by parties who
+are not logged in, secure the taggableComplete/complete action. For
+most projects this is not a big concern.
+
+Now, give your tag input fields the CSS class tag-input. This will be
+automatically detected by the jQuery code.
+
+Fourth, enable typeahead support at the end of each template that contains
+tag fields, or just do it in your layout. You must pass the name of the action
+that provides tag completion:
+
+    <script>
+    pkTagahead(<?php echo json_encode(url_for("taggableComplete/complete")) ?>);
+    </script>
+
+(Note that this means the pkTagahead code could easily be borrowed for use
+in other frameworks and languages.)
+
+Finally, style the tag suggestions so that they line up directly beneath
+your input tags and so that only the new tag suggestions are actually visible.
+
+The tag suggestions will be in a jQuery-generated `span` 
+element containing a `ul` element containing `li` elements, with the new,
+selectable tag suggestions being in `a` elements within those. 
+
+The rest of the tags are present as non-clickable text in each `li` because 
+this neatly lines up the new tag suggestion with the user's input. Just
+hide that text with `visibility: hidden`, NOT `display: none`. 
+
+The right way to write your CSS depends on how your forms are structured.
+In our case, the label to the left of the input element is fixed at 120 pixels
+wide and the input element has a few pixels of padding, so this works great
+for our needs:
+
+    span.tag-suggestions
+    {
+      display: block;
+      clear: both;
+      padding-top: 8px;
+      padding-left: 122px;
+    }
+
+    span.tag-suggestions li
+    {
+      visibility: hidden;
+    }
+
+    span.tag-suggestions a
+    {
+      visibility: visible;
+    }
+
 ## Plugin internals ##
 The plugin associates a parameterHolder to Propel objects, with 3 disjoin namespaces:
 
@@ -359,3 +424,7 @@ The plugin has been deeply unit-tested, if not fully. The tests are located in t
 
 ## License and credits ##
 This plugin has been ported from [sfPropelActAsTaggableBehaviorPlugin](http://www.symfony-project.org/plugins/sfPropelActAsTaggableBehaviorPlugin) by [Mickael Kurmann](http://www.vieuxsteak.ch/) and is licensed under the MIT license.
+
+Support for tag typeahead was contributed by Tom Boutell of 
+[P'unk Avenue](http://www.punkave.com/). 
+
